--- a/spec/www/index.html
+++ b/spec/www/index.html
@@ -23,17 +23,17 @@
     </p>
     <div class="row center-align">
       <div class="col s4">
-        <button class="btn col m12 blue waves-effect waves-light">
+        <button id="create-channel" class="btn col m12 blue waves-effect waves-light">
           Create Channel
         </button>
       </div>
       <div class="col s4">
-        <button class="btn col m12 indigo waves-effect waves-light">
+        <button id="join-channel" class="btn col m12 indigo waves-effect waves-light">
           Join Channel
         </button>
       </div>
       <div class="col s4">
-        <button class="btn col m12 pink  waves-effect waves-light">
+        <button id="leave-channel" class="btn col m12 pink  waves-effect waves-light">
           Leave Channel
         </button>
       </div>
@@ -47,5 +47,8 @@
       </div>
     </div>
   </div>
+  <script type="text/javascript" src="comunicator.js"></script>
+  <script type="text/javascript" src="signaler.js"></script>
+  <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
