--- a/spec/www/index.html
+++ b/spec/www/index.html
@@ -16,9 +16,8 @@
   <div class="container">
     <p>
       <div class="row blank-text">
-        <input type="text" placeholder="Whoami"/>
-        <input type="text" placeholder="RoomID"/>
-        <input type="text" placeholder="User ID"/>
+        <input type="text" id="room-identifier" placeholder="RoomID"/>
+        <input type="text" id="user-identifier" readonly="readonly" placeholder="User Identifier"/>
       </div>
     </p>
     <div class="row center-align">
