--- a/spec/www/index.html
+++ b/spec/www/index.html
@@ -47,6 +47,7 @@
     </div>
   </div>
   <script type="text/javascript" src="comunicator.js"></script>
+  <script type="text/javascript" src="adapter.js"></script>
   <script type="text/javascript" src="signaler.js"></script>
   <script type="text/javascript" src="app.js"></script>
 </body>
