--- a/spec/www/index.html
+++ b/spec/www/index.html
@@ -43,6 +43,8 @@
           Message
         </h6>
         <p class="col m12 center-align blue-text">Some message !?</p>
+        <div id="audio">
+        </div>
       </div>
     </div>
   </div>
