fix on local stream management

--- a/spec/www/index.html
+++ b/spec/www/index.html
@@ -31,7 +31,6 @@
           Join Channel
         </button>
       </div>
-
       <div class="col s3">
         <button id="plug-channel" disabled="disabled" class="btn col m12 grey accent-4 waves-effect waves-light">
           Plug Channel
@@ -46,8 +45,8 @@
     <p class="container">
       <div class="row">
         <div class="input-field col s12">
+          <h6 for="text-to-datachannel">Data channel text</h6>
           <textarea id="text-to-datachannel" class="materialize-textarea"></textarea>
-          <label for="text-to-datachannel">Data channel text</label>
         </div>
       </div>
       <button class="btn white grey-text" id="send-on-datachannel">Send</button>
