commit to remember

--- a/spec/www/index.html
+++ b/spec/www/index.html
@@ -58,7 +58,9 @@
         </h6>
         <p class="col m12 center-align blue-text" id="message-on-datachannel"></p>
         <p>
-        <div class="row center-align" id="audio"></div>
+        <div class="row center-align">
+          <video autoplay="true" controls="true" id="video">
+        </div>
       </p>
       </div>
     </div>
