--- a/spec/www/index.html
+++ b/spec/www/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Signaler Test</title>
-  <!--link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/css/materialize.min.css"-->
+  <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/css/materialize.min.css">
 </head>
 <body class="grey lighten-3">
   <nav class="white">
@@ -58,8 +58,7 @@
         </h6>
         <p class="col m12 center-align blue-text" id="message-on-datachannel"></p>
         <p>
-        <div class="row center-align">
-          <video autoplay="true" id="video"></video>
+        <div class="row center-align" id="video">
         </div>
       </p>
       </div>
