--- a/example/www/index.html
+++ b/example/www/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Signaler Test</title>
-  <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/css/materialize.min.css">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/css/materialize.min.css">
 </head>
 <body class="grey lighten-3">
   <nav class="white">
@@ -75,8 +75,9 @@
       </div>
     </div>
   </div>
+  <script type="text/javascript" src="https://npmcdn.com/@reactivex/rxjs@5.0.0-beta.2/dist/global/Rx.umd.js"></script>
+  <script type="text/javascript" src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
   <script type="text/javascript" src="comunicator.js"></script>
-  <script type="text/javascript" src="adapter.js"></script>
   <script type="text/javascript" src="signaler.js"></script>
   <script type="text/javascript" src="app.js"></script>
 </body>
